# tap-in

./: .gitignore  .gitmodules  README.md  gql-good-bad-foxx.md  http-and-osi.md  jargons.md  modular-monoliths.md  mongo-db.md  postgres-n-jsonb.md  power-of-full-engagement.md  simple-mindset-to-break-through.md  system-architecture-design.md  tp.txt
archive/: http-and-osi.md  postgres-n-jsonb.md
workshop/: DISCLAIMER.txt  README.md
workshop/algo/binary-tree-level-average/: Program.cs  index.js  main.rs
workshop/algo/fibonacci/: Program.cs  index.js  main.rs
workshop/algo/fibonacci_dyn/: Program.cs  index.ts  main.rs
workshop/algo/find_judge/: Program.cs  index.js
workshop/algo/surrounded-regions/: Program.cs  index.ts  main.rs
workshop/algo/task-scheduler-1/: Program.cs  index.js
workshop/algo/valid-sudoku/: Program.cs  index.ts  lib.rs
workshop/aoc/2019/01/: Program.cs  index.ts  main.rs
workshop/consoleApp/guessing_game/: Cargo.toml  Program.cs  README.md  index.js  main.rs  package.json
workshop/ref/read-json-deserialize-serialize-write/: Cargo.toml  Program.cs  _output.txt  index.ts  main.rs
workshop/w3resource/c/: main.c
workshop/w3resource/csharp/: Program.cs
workshop/w3resource/javascript/: w3r.js
workshop/w3resource/rust/: main.rs
